--- a/src/components/privacy.html
+++ b/src/components/privacy.html
@@ -193,6 +193,74 @@
   <p class="text-[#006838] text-lg mt-4">
 	If the data subject wishes to exercise the right to withdraw the consent, he or she may, at any time, contact any employee of the Agentur Baumeister.
   </p>
+
+
+<h2 class="text-2xl  text-[#006838] mt-8 mb-4">6. Data Protection Provisions about the Application and Use of Instagram</h2>
+<p class="text-[#006838] text-lg">
+  On this website, the controller has integrated components of the service Instagram. Instagram is a service that may be qualified as an audiovisual platform, which allows users to share photos and videos, as well as disseminate such data in other social networks.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  The operating company of the services offered by Instagram is Facebook Ireland Ltd., 4 Grand Canal Square, Grand Canal Harbour, Dublin 2, Ireland.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  With each call-up to one of the individual pages of this Internet site, which is operated by the controller and on which an Instagram component (Insta button) was integrated, the Internet browser on the information technology system of the data subject is automatically prompted to download a display of the corresponding Instagram component. During the course of this technical procedure, Instagram becomes aware of what specific sub-page of our website was visited by the data subject.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  If the data subject is logged in at the same time on Instagram, Instagram detects with every call-up to our website by the data subject—and for the entire duration of their stay on our Internet site—which specific sub-page of our Internet page was visited by the data subject. This information is collected through the Instagram component and is associated with the respective Instagram account of the data subject. If the data subject clicks on one of the Instagram buttons integrated on our website, then Instagram matches this information with the personal Instagram user account of the data subject and stores the personal data.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  Instagram receives information via the Instagram component that the data subject has visited our website provided that the data subject is logged in at Instagram at the time of the call to our website. This occurs regardless of whether the person clicks on the Instagram button or not. If such a transmission of information to Instagram is not desirable for the data subject, then he or she can prevent this by logging off from their Instagram account before a call-up to our website is made.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  Further information and the applicable data protection provisions of Instagram may be retrieved under 
+  https://help.instagram.com/155833707900388 and https://www.instagram.com/about/legal/privacy/.
+
+</p>
+<h2 class="text-2xl  text-[#006838] mt-8 mb-4">7. Data Protection Provisions about the Application and Use of LinkedIn</h2>
+<p class="text-[#006838] text-lg">
+  The controller has integrated components of the LinkedIn Corporation on this website. LinkedIn is a web-based social network that enables users with existing business contacts to connect and to make new business contacts. Over 400 million registered people in more than 200 countries use LinkedIn. Thus, LinkedIn is currently the largest platform for business contacts and one of the most visited websites in the world.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  The operating company of LinkedIn is LinkedIn Corporation, 2029 Stierlin Court, Mountain View, CA 94043, UNITED STATES. For privacy matters outside of the UNITED STATES, LinkedIn Ireland, Privacy Policy Issues, Wilton Plaza, Wilton Place, Dublin 2, Ireland, is responsible.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  With each call-up to one of the individual pages of this Internet site, which is operated by the controller and on which a LinkedIn component (LinkedIn plug-in) was integrated, the Internet browser on the information technology system of the data subject is automatically prompted to download a display of the corresponding LinkedIn component. Further information about the LinkedIn plug-in may be accessed under 
+  <a href="https://developer.linkedin.com/plugins" class="text-blue-600 underline">this link</a>. 
+  During the course of this technical procedure, LinkedIn gains knowledge of what specific sub-page of our website was visited by the data subject.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  If the data subject is logged in at the same time on LinkedIn, LinkedIn detects with every call-up to our website by the data subject—and for the entire duration of their stay on our Internet site—which specific sub-page of our Internet page was visited by the data subject. This information is collected through the LinkedIn component and associated with the respective LinkedIn account of the data subject. If the data subject clicks on one of the LinkedIn buttons integrated on our website, then LinkedIn assigns this information to the personal LinkedIn user account of the data subject and stores the personal data.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  LinkedIn receives information via the LinkedIn component that the data subject has visited our website, provided that the data subject is logged in at LinkedIn at the time of the call-up to our website. This occurs regardless of whether the person clicks on the LinkedIn button or not. If such a transmission of information to LinkedIn is not desirable for the data subject, then he or she may prevent this by logging off from their LinkedIn account before a call-up to our website is made.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  LinkedIn provides options to unsubscribe from e-mail messages, SMS messages, and targeted ads, as well as the ability to manage ad settings under 
+  https://www.linkedin.com/psettings/guest-controls the possibility to unsubscribe from e-mail messages, SMS messages and targeted ads, as well as the ability to manage ad settings. 
+  LinkedIn also uses affiliates such as Eire, Google Analytics, BlueKai, DoubleClick, Nielsen, Comscore, Eloqua, and Lotame. The setting of such cookies may be denied under 
+  https://www.linkedin.com/legal/privacy-policy. 
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  The applicable privacy policy for LinkedIn is available under 
+   https://www.linkedin.com/legal/privacy-policy.
+  The LinkedIn Cookie Policy is available under 
+  https://www.linkedin.com/legal/cookie-policy.
+</p>
+<h2 class="text-2xl text-[#006838] mt-8 mb-4">8. Legal Basis for the Processing</h2>
+<p class="text-[#006838] text-lg">
+  Art. 6(1) lit. a GDPR serves as the legal basis for processing operations for which we obtain consent for a specific processing purpose. If the processing of personal data is necessary for the performance of a contract to which the data subject is party, as is the case, for example, when processing operations are necessary for the supply of goods or to provide any other service, the processing is based on Article 6(1) lit. b GDPR. The same applies to such processing operations which are necessary for carrying out pre-contractual measures, for example in the case of inquiries concerning our products or services.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  If our company is subject to a legal obligation that requires processing of personal data, such as fulfilling tax obligations, the processing is based on Art. 6(1) lit. c GDPR. In rare cases, the processing of personal data may be necessary to protect the vital interests of the data subject or another natural person. This would be the case, for example, if a visitor were injured at our company and their name, age, health insurance data, or other vital information had to be passed on to a doctor, hospital, or other third party. In such cases, processing would be based on Art. 6(1) lit. d GDPR.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  Finally, processing operations could be based on Article 6(1) lit. f GDPR. This legal basis is used for processing operations that are not covered by any of the abovementioned legal grounds, provided that processing is necessary for the purposes of the legitimate interests pursued by our company or a third party, except where such interests are overridden by the interests or fundamental rights and freedoms of the data subject that require protection of personal data. 
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  Such processing operations are particularly permissible because they have been specifically mentioned by the European legislator. It is considered that a legitimate interest could be assumed if the data subject is a client of the controller (Recital 47, Sentence 2 GDPR).
+</p>
+
+
   
   </div>
 </body>
