--- a/src/components/privacy.html
+++ b/src/components/privacy.html
@@ -225,7 +225,7 @@
 </p>
 <p class="text-[#006838] text-lg mt-4">
   With each call-up to one of the individual pages of this Internet site, which is operated by the controller and on which a LinkedIn component (LinkedIn plug-in) was integrated, the Internet browser on the information technology system of the data subject is automatically prompted to download a display of the corresponding LinkedIn component. Further information about the LinkedIn plug-in may be accessed under 
-  <a href="https://developer.linkedin.com/plugins" class="text-blue-600 underline">this link</a>. 
+  https://developer.linkedin.com/plugins 
   During the course of this technical procedure, LinkedIn gains knowledge of what specific sub-page of our website was visited by the data subject.
 </p>
 <p class="text-[#006838] text-lg mt-4">
@@ -259,7 +259,42 @@
 <p class="text-[#006838] text-lg mt-4">
   Such processing operations are particularly permissible because they have been specifically mentioned by the European legislator. It is considered that a legitimate interest could be assumed if the data subject is a client of the controller (Recital 47, Sentence 2 GDPR).
 </p>
+<h2 class="text-2xl  text-[#006838] mt-8 mb-4">9. The Legitimate Interests Pursued by the Controller or by a Third Party</h2>
+<p class="text-[#006838] text-lg">
+  Where the processing of personal data is based on Article 6(1) lit. f GDPR, our legitimate interest is to carry out our business in favor of the well-being of all our employees and the shareholders.
+</p>
 
+<h2 class="text-2xl  text-[#006838] mt-8 mb-4">10. Period for Which the Personal Data Will Be Stored</h2>
+<p class="text-[#006838] text-lg">
+  The criteria used to determine the period of storage of personal data is the respective statutory retention period. After expiration of that period, the corresponding data is routinely deleted, as long as it is no longer necessary for the fulfillment of the contract or the initiation of a contract.
+</p>
+<h2 class="text-2xl  text-[#006838] mt-8 mb-4">
+	11. Provision of Personal Data as Statutory or Contractual Requirement; Requirement Necessary to Enter into a Contract; Obligation of the Data Subject to Provide the Personal Data; Possible Consequences of Failure to Provide Such Data
+  </h2>
+  <p class="text-[#006838] text-lg">
+	We clarify that the provision of personal data is partly required by law (e.g. tax regulations) or can also result from contractual provisions (e.g. information on the contractual partner). Sometimes it may be necessary to conclude a contract that the data subject provides us with personal data, which must subsequently be processed by us. The data subject is, for example, obliged to provide us with personal data when our company signs a contract with him or her. The non-provision of the personal data would have the consequence that the contract with the data subject could not be concluded. 
+  </p>
+  <p class="text-[#006838] text-lg">
+	Before personal data is provided by the data subject, the data subject must contact any employee. The employee clarifies to the data subject whether the provision of the personal data is required by law or contract or is necessary for the conclusion of the contract, whether there is an obligation to provide the personal data and the consequences of non-provision of the personal data.
+  </p>
+  <h2 class="text-2xl  text-[#006838] mt-8 mb-4">
+	12. Existence of Automated Decision-Making
+  </h2>
+  <p class="text-[#006838] text-lg">
+	As a responsible company, we do not use automatic decision-making or profiling.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	Developed by the specialists for LegalTech at Willing & Able that also developed the system for GDPR awareness.
+	The legal texts contained in our privacy policy generator have been provided and published by 
+	<a href="https://www.verband-datenschutz.de/" target="_blank" class="font-semibold text-[#006838] underline">
+	  Prof. Dr. h.c. Heiko Jonny Maniero
+	</a> from the German Association for Data Protection 
+	and 
+	<a href="https://www.wbs.legal/" target="_blank" class="font-semibold text-[#006838] underline">
+	  Christian Solmecke
+	</a> from WBS Law.
+  </p>
+  
 
   
   </div>
