--- a/src/components/privacy.html
+++ b/src/components/privacy.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-[#f8f5f0] min-h-screen flex justify-start items-center p-6">
   <div class="max-w-4xl w-full ml-16">
-    <h1 class="text-3xl font-bold text-[#006838] mb-6">DATA PRIVACY</h1>
+    <h1 class="text-2xl font-bold text-[#006838] mb-6">DATA PRIVACY</h1>
     <h2 class="text-2xl  text-[#006838] mb-6">PRIVACY POLICY</h2>
     <div class=" text-[#006838] text-lg leading-tight">
       <p>
@@ -37,7 +37,7 @@
       </p>
 
     </div>
-	<h2 class="text-lg text-[#006838] mt-8 ">1. Definitions</h2>
+	<h2 class="text-lg text-[#006838] mt-6 ">1. Definitions</h2>
     <div class="text-[#006838] text-lg leading-tight">
       <p>The data protection declaration of the Agentur Baumeister is based on the terms used by the European legislator for the adoption of the General Data Protection Regulation (GDPR). Our data protection declaration should be legible and understandable for the general public, as well as our customers and business partners. To ensure this, we would like to first explain the terminology used.</p>
       <p>In this data protection declaration, we use, inter alia, the following terms:</p>
@@ -64,7 +64,7 @@
     <p class="text-[#006838] text-lg">Email: katrein@agentur-baumeister.com</p>
     <p class="text-[#006838] text-lg">Website: www.agentur-baumeister.com</p>
 
-    <h2 class="text-lg  text-[#006838] mt-8 ">3. Collection of General Data and Information</h2>
+    <h2 class="text-lg  text-[#006838] mt-6 ">3. Collection of General Data and Information</h2>
 <p class="text-[#006838] text-lg leading-tight">
 	The website of the Agentur Baumeister collects a series of general data and information when a data subject or automated system calls up the website. This general data and information are stored in the server log files. Collected may be (1) the browser types and versions used, (2) the operating system used by the accessing system, (3) the website from which an accessing system reaches our website (so-called referrers), (4) the sub-websites, (5) the date and time of access to the Internet site, (6) an Internet protocol address (IP address), (7) the Internet service provider of the accessing system, and (8) any other similar data and information that may be used in the event of attacks on our information technology systems.
 </p>
@@ -73,14 +73,14 @@
 </p>
 
 
-    <h2 class="text-lg text-[#006838] mt-4 ">4. Routine Erasure and Blocking of Personal Data</h2>
+    <h2 class="text-lg text-[#006838] mt-6 ">4. Routine Erasure and Blocking of Personal Data</h2>
     <p class="text-[#006838] text-lg leading-tight">
 		The data controller shall process and store the personal data of the data subject only for the period necessary to achieve the purpose of storage, or as far as this is granted by the European legislator or other legislators in laws or regulations to which the controller is subject to.
 		
 	</p>
 	<P class="text-[#006838] text-lg leading-tight">If the storage purpose is not applicable, or if a storage period prescribed by the European legislator or another competent legislator expires, the personal data are routinely blocked or erased in accordance with legal requirements.</P>
 
-	<h2 class="text-lg  text-[#006838] mt-4 ">5. Rights of the Data Subject</h2>
+	<h2 class="text-lg  text-[#006838] mt-6">5. Rights of the Data Subject</h2>
 
 <h3 class="text-lg  text-[#006838] pl-6 ">• a) Right of Confirmation</h3>
 <p class="text-[#006838] text-lg pl-6 leading-tight">
@@ -197,7 +197,7 @@
   </p>
 
 
-<h2 class="text-lg  text-[#006838] mt-4 ">6. Data Protection Provisions about the Application and Use of Instagram</h2>
+<h2 class="text-lg  text-[#006838] mt-6 ">6. Data Protection Provisions about the Application and Use of Instagram</h2>
 <p class="text-[#006838] text-lg leading-tight">
   On this website, the controller has integrated components of the service Instagram. Instagram is a service that may be qualified as an audiovisual platform, which allows users to share photos and videos, as well as disseminate such data in other social networks.
 </p>
@@ -218,74 +218,74 @@
   https://help.instagram.com/155833707900388 and https://www.instagram.com/about/legal/privacy/.
 
 </p>
-<h2 class="text-2xl  text-[#006838] mt-8 mb-4">7. Data Protection Provisions about the Application and Use of LinkedIn</h2>
-<p class="text-[#006838] text-lg">
+<h2 class="text-lg  text-[#006838] mt-6 ">7. Data Protection Provisions about the Application and Use of LinkedIn</h2>
+<p class="text-[#006838] text-lg leading-tight">
   The controller has integrated components of the LinkedIn Corporation on this website. LinkedIn is a web-based social network that enables users with existing business contacts to connect and to make new business contacts. Over 400 million registered people in more than 200 countries use LinkedIn. Thus, LinkedIn is currently the largest platform for business contacts and one of the most visited websites in the world.
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   The operating company of LinkedIn is LinkedIn Corporation, 2029 Stierlin Court, Mountain View, CA 94043, UNITED STATES. For privacy matters outside of the UNITED STATES, LinkedIn Ireland, Privacy Policy Issues, Wilton Plaza, Wilton Place, Dublin 2, Ireland, is responsible.
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   With each call-up to one of the individual pages of this Internet site, which is operated by the controller and on which a LinkedIn component (LinkedIn plug-in) was integrated, the Internet browser on the information technology system of the data subject is automatically prompted to download a display of the corresponding LinkedIn component. Further information about the LinkedIn plug-in may be accessed under 
   https://developer.linkedin.com/plugins 
   During the course of this technical procedure, LinkedIn gains knowledge of what specific sub-page of our website was visited by the data subject.
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   If the data subject is logged in at the same time on LinkedIn, LinkedIn detects with every call-up to our website by the data subject—and for the entire duration of their stay on our Internet site—which specific sub-page of our Internet page was visited by the data subject. This information is collected through the LinkedIn component and associated with the respective LinkedIn account of the data subject. If the data subject clicks on one of the LinkedIn buttons integrated on our website, then LinkedIn assigns this information to the personal LinkedIn user account of the data subject and stores the personal data.
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   LinkedIn receives information via the LinkedIn component that the data subject has visited our website, provided that the data subject is logged in at LinkedIn at the time of the call-up to our website. This occurs regardless of whether the person clicks on the LinkedIn button or not. If such a transmission of information to LinkedIn is not desirable for the data subject, then he or she may prevent this by logging off from their LinkedIn account before a call-up to our website is made.
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   LinkedIn provides options to unsubscribe from e-mail messages, SMS messages, and targeted ads, as well as the ability to manage ad settings under 
   https://www.linkedin.com/psettings/guest-controls the possibility to unsubscribe from e-mail messages, SMS messages and targeted ads, as well as the ability to manage ad settings. 
   LinkedIn also uses affiliates such as Eire, Google Analytics, BlueKai, DoubleClick, Nielsen, Comscore, Eloqua, and Lotame. The setting of such cookies may be denied under 
   https://www.linkedin.com/legal/privacy-policy. 
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   The applicable privacy policy for LinkedIn is available under 
    https://www.linkedin.com/legal/privacy-policy.
   The LinkedIn Cookie Policy is available under 
   https://www.linkedin.com/legal/cookie-policy.
 </p>
-<h2 class="text-2xl text-[#006838] mt-8 mb-4">8. Legal Basis for the Processing</h2>
-<p class="text-[#006838] text-lg">
+<h2 class="text-lg text-[#006838] mt-6 ">8. Legal Basis for the Processing</h2>
+<p class="text-[#006838] text-lg leading-tight">
   Art. 6(1) lit. a GDPR serves as the legal basis for processing operations for which we obtain consent for a specific processing purpose. If the processing of personal data is necessary for the performance of a contract to which the data subject is party, as is the case, for example, when processing operations are necessary for the supply of goods or to provide any other service, the processing is based on Article 6(1) lit. b GDPR. The same applies to such processing operations which are necessary for carrying out pre-contractual measures, for example in the case of inquiries concerning our products or services.
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   If our company is subject to a legal obligation that requires processing of personal data, such as fulfilling tax obligations, the processing is based on Art. 6(1) lit. c GDPR. In rare cases, the processing of personal data may be necessary to protect the vital interests of the data subject or another natural person. This would be the case, for example, if a visitor were injured at our company and their name, age, health insurance data, or other vital information had to be passed on to a doctor, hospital, or other third party. In such cases, processing would be based on Art. 6(1) lit. d GDPR.
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   Finally, processing operations could be based on Article 6(1) lit. f GDPR. This legal basis is used for processing operations that are not covered by any of the abovementioned legal grounds, provided that processing is necessary for the purposes of the legitimate interests pursued by our company or a third party, except where such interests are overridden by the interests or fundamental rights and freedoms of the data subject that require protection of personal data. 
 </p>
-<p class="text-[#006838] text-lg mt-4">
+<p class="text-[#006838] text-lg leading-tight">
   Such processing operations are particularly permissible because they have been specifically mentioned by the European legislator. It is considered that a legitimate interest could be assumed if the data subject is a client of the controller (Recital 47, Sentence 2 GDPR).
 </p>
-<h2 class="text-2xl  text-[#006838] mt-8 mb-4">9. The Legitimate Interests Pursued by the Controller or by a Third Party</h2>
-<p class="text-[#006838] text-lg">
+<h2 class="text-lg  text-[#006838] mt-6">9. The Legitimate Interests Pursued by the Controller or by a Third Party</h2>
+<p class="text-[#006838] text-lg leading-tight">
   Where the processing of personal data is based on Article 6(1) lit. f GDPR, our legitimate interest is to carry out our business in favor of the well-being of all our employees and the shareholders.
 </p>
 
-<h2 class="text-2xl  text-[#006838] mt-8 mb-4">10. Period for Which the Personal Data Will Be Stored</h2>
-<p class="text-[#006838] text-lg">
+<h2 class="text-lg  text-[#006838] mt-6">10. Period for Which the Personal Data Will Be Stored</h2>
+<p class="text-[#006838] text-lg leading-tight">
   The criteria used to determine the period of storage of personal data is the respective statutory retention period. After expiration of that period, the corresponding data is routinely deleted, as long as it is no longer necessary for the fulfillment of the contract or the initiation of a contract.
 </p>
-<h2 class="text-2xl  text-[#006838] mt-8 mb-4">
+<h2 class="text-lg  text-[#006838] mt-6 ">
 	11. Provision of Personal Data as Statutory or Contractual Requirement; Requirement Necessary to Enter into a Contract; Obligation of the Data Subject to Provide the Personal Data; Possible Consequences of Failure to Provide Such Data
   </h2>
-  <p class="text-[#006838] text-lg">
+  <p class="text-[#006838] text-lg leading-tight">
 	We clarify that the provision of personal data is partly required by law (e.g. tax regulations) or can also result from contractual provisions (e.g. information on the contractual partner). Sometimes it may be necessary to conclude a contract that the data subject provides us with personal data, which must subsequently be processed by us. The data subject is, for example, obliged to provide us with personal data when our company signs a contract with him or her. The non-provision of the personal data would have the consequence that the contract with the data subject could not be concluded. 
   </p>
-  <p class="text-[#006838] text-lg">
+  <p class="text-[#006838] text-lg leading-tight">
 	Before personal data is provided by the data subject, the data subject must contact any employee. The employee clarifies to the data subject whether the provision of the personal data is required by law or contract or is necessary for the conclusion of the contract, whether there is an obligation to provide the personal data and the consequences of non-provision of the personal data.
   </p>
-  <h2 class="text-2xl  text-[#006838] mt-8 mb-4">
+  <h2 class="text-lg  text-[#006838] mt-6">
 	12. Existence of Automated Decision-Making
   </h2>
-  <p class="text-[#006838] text-lg">
+  <p class="text-[#006838] text-lg leading-tight">
 	As a responsible company, we do not use automatic decision-making or profiling.
   </p>
-  <p class="text-[#006838] text-lg mt-4">
+  <p class="text-[#006838] text-lg leading-tight">
 	Developed by the specialists for LegalTech at Willing & Able that also developed the system for GDPR awareness.
 	The legal texts contained in our privacy policy generator have been provided and published by 
 	<a href="https://www.verband-datenschutz.de/" target="_blank" class="font-semibold text-[#006838] underline">
