--- a/src/components/customer.html
+++ b/src/components/customer.html
@@ -7,35 +7,35 @@
 
 	<div 
 	  class="absolute right-28 top-1/2 transform -translate-y-1/2 w-[318px] max-h-[900px] overflow-hidden text-right text-black font-semibold leading-tight">
-	  <a href="/ace-hotel" class="block hover:text-gray-500 transition">Ace Hotel</a>
-	  <a href="/armedangels" class="block hover:text-gray-500 transition">ARMEDANGELS</a>
-	  <a href="/berlin-design-week" class="block hover:text-gray-500 transition">BERLIN DESIGN WEEK</a>
-	  <a href="/berliner-berg" class="block hover:text-gray-500 transition">Berliner Berg</a>
-	  <a href="/bite-club" class="block hover:text-gray-500 transition">BITE CLUB</a>
-	  <a href="/budweiser-budvar" class="block hover:text-gray-500 transition">Budweiser Budvar</a>
-	  <a href="/chungking-noodles" class="block hover:text-gray-500 transition">ChungKing Noodles</a>
-	  <a href="/designpreis-brandenburg" class="block hover:text-gray-500 transition">Designpreis Brandenburg</a>
-	  <a href="/die-techniker" class="block hover:text-gray-500 transition">Die Techniker</a>
-	  <a href="/european-street-food-awards" class="block hover:text-gray-500 transition">European Street Food Awards</a>
-	  <a href="/grundmann-dentistry" class="block hover:text-gray-500 transition">Grundmann Dentistry</a>
-	  <a href="/hornbach-werkstuck" class="block hover:text-gray-500 transition">HORNBACH Werkstück</a>
-	  <a href="/hornbach-macht-schule" class="block hover:text-gray-500 transition">HORNBACH macht Schule</a>
-	  <a href="/if-design" class="block hover:text-gray-500 transition">iF Design</a>
-	  <a href="/kapka" class="block hover:text-gray-500 transition">Kapka</a>
-	  <a href="/klh-massschuhe" class="block hover:text-gray-500 transition">KLH Maßschuhe</a>
-	  <a href="/lode-stijn" class="block hover:text-gray-500 transition">Lode & Stijn</a>
-	  <a href="/luya" class="block hover:text-gray-500 transition">Luya</a>
-	  <a href="/meissen" class="block hover:text-gray-500 transition">MEISSEN</a>
-	  <a href="/motel-beer-coffee" class="block hover:text-gray-500 transition">Motel Beer & Coffee</a>
-	  <a href="/paper-tea" class="block hover:text-gray-500 transition">PAPER & TEA</a>
-	  <a href="/rocket-basil" class="block hover:text-gray-500 transition">rocket & basil</a>
-	  <a href="/seeberger-gruppe" class="block hover:text-gray-500 transition">Seeberger Gruppe</a>
-	  <a href="/shiori" class="block hover:text-gray-500 transition">Shiori</a>
-	  <a href="/spoc-magazin" class="block hover:text-gray-500 transition">SPOC Magazin</a>
-	  <a href="/stacuba" class="block hover:text-gray-500 transition">stacuba</a>
-	  <a href="/stur" class="block hover:text-gray-500 transition">STUR</a>
-	  <a href="/world-of-coffee" class="block hover:text-gray-500 transition">World of Coffee</a>
-	  <a href="/yamo" class="block hover:text-gray-500 transition">yamo</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Ace Hotel</a>
+	  <a href="#" class="block hover:text-gray-500 transition">ARMEDANGELS</a>
+	  <a href="#" class="block hover:text-gray-500 transition">BERLIN DESIGN WEEK</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Berliner Berg</a>
+	  <a href="#" class="block hover:text-gray-500 transition">BITE CLUB</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Budweiser Budvar</a>
+	  <a href="#" class="block hover:text-gray-500 transition">ChungKing Noodles</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Designpreis Brandenburg</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Die Techniker</a>
+	  <a href="#" class="block hover:text-gray-500 transition">European Street Food Awards</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Grundmann Dentistry</a>
+	  <a href="#" class="block hover:text-gray-500 transition">HORNBACH Werkstück</a>
+	  <a href="#" class="block hover:text-gray-500 transition">HORNBACH macht Schule</a>
+	  <a href="#" class="block hover:text-gray-500 transition">iF Design</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Kapka</a>
+	  <a href="#" class="block hover:text-gray-500 transition">KLH Maßschuhe</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Lode & Stijn</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Luya</a>
+	  <a href="#" class="block hover:text-gray-500 transition">MEISSEN</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Motel Beer & Coffee</a>
+	  <a href="#" class="block hover:text-gray-500 transition">PAPER & TEA</a>
+	  <a href="#" class="block hover:text-gray-500 transition">rocket & basil</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Seeberger Gruppe</a>
+	  <a href="#" class="block hover:text-gray-500 transition">Shiori</a>
+	  <a href="#" class="block hover:text-gray-500 transition">SPOC Magazin</a>
+	  <a href="#" class="block hover:text-gray-500 transition">stacuba</a>
+	  <a href="#" class="block hover:text-gray-500 transition">STUR</a>
+	  <a href="#" class="block hover:text-gray-500 transition">World of Coffee</a>
+	  <a href="#" class="block hover:text-gray-500 transition">yamo</a>
 
 	</div>
   </section>
