--- a/src/components/customer.html
+++ b/src/components/customer.html
@@ -5,8 +5,8 @@
 		 class="w-full h-full object-cover absolute inset-0 -z-10" />
   
 
-	<div 
-	  class="absolute right-28 top-1/2 transform -translate-y-1/2 w-[318px] max-h-[900px] overflow-hidden text-right text-black font-semibold leading-tight">
+	<div
+	  class="absolute right-4 md:right-28 top-1/2 transform -translate-y-1/2 w-[80%] md:w-[318px] max-h-[75vh] overflow-auto text-right text-black font-semibold leading-tight">
 	  <a href="#" class="block hover:text-gray-500 transition">Ace Hotel</a>
 	  <a href="#" class="block hover:text-gray-500 transition">ARMEDANGELS</a>
 	  <a href="#" class="block hover:text-gray-500 transition">BERLIN DESIGN WEEK</a>
