--- a/src/components/customer.html
+++ b/src/components/customer.html
@@ -1,12 +1,12 @@
-<section class="relative min-h-screen flex items-center justify-center">
+    <section class="relative min-h-screen flex items-center justify-center">
 
 	<img src="/src/assets/Rectangle 3.png" 
-		 alt="Yellow Background" 
-		 class="w-full h-full object-cover absolute inset-0 -z-10" />
+	alt="Yellow Background" 
+	class="w-full h-full object-cover absolute inset-0 -z-10" />
   
 
 	<div
-	class="absolute right-4 md:right-28 top-1/2 transform -translate-y-1/2 w-[80%] md:w-[318px] max-h-[75vh] overflow-auto hide-scrollbar text-right text-black font-semibold leading-tight">
+	class="absolute right-4 md:right-28 top-1/2 transform -translate-y-1/2 w-[80%] md:w-[318px] overflow-auto  text-right text-black font-semibold leading-tight">
 	  <a href="#" class="block hover:text-gray-500 transition">Ace Hotel</a>
 	  <a href="#" class="block hover:text-gray-500 transition">ARMEDANGELS</a>
 	  <a href="#" class="block hover:text-gray-500 transition">BERLIN DESIGN WEEK</a>
