--- a/src/components/customer.html
+++ b/src/components/customer.html
@@ -6,7 +6,7 @@
   
 
 	<div
-	class="absolute right-4 md:right-28 top-1/2 transform -translate-y-1/2 w-[80%] md:w-[318px] max-h-[75vh] overflow-hidden text-right text-black font-semibold leading-tight">
+	class="absolute right-4 md:right-28 top-1/2 transform -translate-y-1/2 w-[80%] md:w-[318px]  text-right text-black font-semibold leading-tight">
   
 	  <a href="#" class="block hover:text-gray-500 transition">Ace Hotel</a>
 	  <a href="#" class="block hover:text-gray-500 transition">ARMEDANGELS</a>
