--- a/src/components/customer.html
+++ b/src/components/customer.html
@@ -2,7 +2,7 @@
 
 	<img src="/src/assets/Rectangle 3.png" 
 	alt="Yellow Background" 
-	class="w-full h-full object-cover absolute inset-0 -z-10" />
+	class=" absolute inset-0 -z-10" />
   
 
 	<div
@@ -37,6 +37,6 @@
 	  <a href="#" class="block hover:text-gray-500 transition">STUR</a>
 	  <a href="#" class="block hover:text-gray-500 transition">World of Coffee</a>
 	  <a href="#" class="block hover:text-gray-500 transition">yamo</a>
-    </>
+    </div>
     </section>
   
